--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start-static": "cd out && python -m http.server 8000"
   },
   "dependencies": {
+    "express": "^5.2.1",
     "next": "^15.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
