--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start-static": "cd out && python -m http.server 5050"
   },
   "dependencies": {
+    "better-sqlite3": "^12.5.0",
     "express": "^5.2.1",
     "next": "^15.4.5",
     "react": "18.2.0",
