--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "start-static": "cd out && python -m http.server 5050"
+    "start": "next start -p 3000",
+    "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
     "express": "^5.2.1",
+    "iron-session": "^8.0.4",
     "next": "^15.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.27",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.21",
