--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 5050",
     "lint": "next lint",
     "export": "next export",
     "start-static": "cd out && python -m http.server 5050",
