--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "lucide-react": "^0.508.0",
-    "next": "^15.5.9",
+    "next": "^16.1.6",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
